--- a/css/estilo.css
+++ b/css/estilo.css
@@ -560,11 +560,12 @@ body {
         min-width: 13rem;
         display: block;
         border: none;
-        padding: 1rem 3rem 1rem 1rem;
+        text-align: left;
+        padding: 1rem 1rem 1rem 4rem;
         background-color: #0095ff;
         border-radius: 5rem;
         color: white;
-        font-size: 1rem;
+        font-size: 1.3rem;
     }
 }
 
